2014-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex_version.h: 0.99992

2014-07-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Remove unused variables k,and l in function
	get_strings_started, and q, and r in procedure set_math_char().
	* image/mfileio.c: Change type of a variable i in mfgets() in order to
	suppress warnings.
	* image/bmpimage.c: Remove an unused variable i in bmp_scan_file().
	* image/jpegimage.c: Remove an unused variable rational_value in
	read_APP1_Exif().
	* image/pngimage.c: Remove unused variables stream_data_ptr,
	trans_type, and rowbytes in png_scan_file().
	* XeTeXFontMgr_FC.cpp: Remove an unused label restart.

2014-05-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* image/bmpimage.c: Error exit instead of crashing for unsupported
	bmp in bmp_scan_file().

2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.c: Accept Ctrl+Z as EOF in console (keyboard).
	(Windows only)

2014-03-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXFontInst.cpp, XeTeXFontInst_Mac.cpp, XeTeXFontMgr.cpp,
	XeTeXFontMgr_FC.cpp, XeTeXLayoutInterface.cpp, XeTeXOTMath.cpp,
	hz.cpp, pdfimage.cpp: <w2c/config.h> is now C++ safe.

	* XeTeXFontMgr.cpp, XeTeXLayoutInterface.cpp, XeTeXOTMath.cpp,
	hz.cpp: Move extern declarations from the Pascal/WEB side ...
	* XeTeX_web.h (new): ... to here.
	* am/xetex.am: Add the new file.

2014-02-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.h: Display output of Unicode characters
	on console. (Windows only)

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* xetex.web: Adapt to TeX Version 3.14159265.

2014-01-17  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* XeTeX_ext.c, xetex.h: Accept Unicode characters from STDIN
	on console. (Windows only)

2013-12-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Remove unused variables.
	'i' in read_tag_with_param(const char* cp, int* param), and
	'x', 'y' in a block if (fontarea[f] == OTGR_FONT_FLAG) {