@@ -204,3 +204,7 @@ if XETEX
 TESTS += $(xetex_tests)
 endif XETEX
 
+## xetex-bug73.test
+EXTRA_DIST += xetexdir/tests/bug73.log xetexdir/tests/bug73.tex
+DISTCLEANFILES += bug73.fmt bug73.log bug73.out bug73.tex
+
