@@ -1,7 +1,16 @@
+% Copyright (C) 2014 Peter Breitenlohner <tex-live@tug.org>
+% You may freely use, modify and/or distribute this file.
+%
+\ifx\fmtname\undefined
+  \input basic
+  \def\fmtname{basic}
+  \expandafter\dump
+\fi
+%==================
 \begingroup % Just there to minimize tracing output
   \tracingmacros=2
   \tracingonline=1
   \everyvbox{\relax} % or whatever, non-empty.
-  \vbox{}
+  \setbox0=\vbox{} % no pdf output
 \endgroup
 \end
